<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bar"
    android:orientation="horizontal">

    <Button
        android:id="@+id/button_back"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:text="@string/button_back"
        android:textColor="#fff"
        android:layout_gravity="center"
        android:layout_margin="5dip"
        android:layout_weight="1"
        android:background="@drawable/smallbutton"/>

    <TextView
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:text="@string/title"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="0dip"
        android:layout_weight="3"/>

    <Button
        android:id="@+id/button_exit"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:text="@string/button_exit"
        android:textColor="#fff"
        android:layout_gravity="center"
        android:layout_margin="5dip"
        android:layout_weight="1"
        android:background="@drawable/smallbutton"/>

</LinearLayout>
