<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ldq.rolelist.layout.TitleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:text="@string/test"
                android:textSize="18sp"
                android:layout_margin="5dip"
                android:padding="0dip"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dip">

                <Spinner
                    android:id="@+id/spinner_month"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:entries="@array/spinner_month"
                    android:textSize="15sp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:padding="0dip"
                    android:layout_margin="2dip"/>

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/test_month"
                    android:textSize="15sp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:layout_margin="2dip"/>

                <Spinner
                    android:id="@+id/spinner_day"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:entries="@array/spinner_day"
                    android:textSize="15sp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:padding="0dip"
                    android:layout_margin="2dip"/>

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/test_day"
                    android:textSize="15sp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:layout_margin="2dip"
                    android:padding="0dip"/>

            </LinearLayout>

            <Button
                android:id="@+id/button_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_submit"
                android:textColor="#fff"
                android:textSize="15sp"
                android:layout_margin="5dip"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"
                android:enabled="true"
                android:background="@drawable/button_background"/>

        </LinearLayout>

    </ScrollView>



</LinearLayout>
