<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ldq.rolelist.layout.TitleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="0"
                android:shrinkColumns="1"
                android:background="#000"
                android:layout_margin="10dip" >

                <TableRow>

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:text="@string/info_name"
                        android:textSize="18sp"
                        android:background="#fff"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_margin="2dip"
                        android:padding="0dip"/>

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:background="#fff"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:layout_weight="3"
                        android:layout_margin="2dip"
                        android:padding="0dip"/>

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:text="@string/info_romaji"
                        android:textSize="18sp"
                        android:background="#fff"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_margin="2dip"
                        android:padding="0dip"/>

                    <TextView
                        android:id="@+id/romaji"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:background="#fff"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:layout_weight="3"
                        android:layout_margin="2dip"
                        android:padding="0dip"/>

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:text="@string/info_sex"
                        android:textSize="18sp"
                        android:background="#fff"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_margin="2dip"
                        android:padding="0dip"/>

                    <TextView
                        android:id="@+id/sex"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:background="#fff"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:layout_weight="3"
                        android:layout_margin="2dip"
                        android:padding="0dip"/>

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:text="@string/info_blood"
                        android:textSize="18sp"
                        android:background="#fff"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_margin="2dip"
                        android:padding="0dip"/>

                    <TextView
                        android:id="@+id/blood"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:background="#fff"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:layout_weight="3"
                        android:layout_margin="2dip"
                        android:padding="0dip"/>

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:text="@string/info_birthday"
                        android:textSize="18sp"
                        android:background="#fff"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_margin="2dip"
                        android:padding="0dip"/>

                    <TextView
                        android:id="@+id/birthday"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:background="#fff"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:layout_weight="3"
                        android:layout_margin="2dip"
                        android:padding="0dip"/>

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:text="@string/info_note"
                        android:textSize="18sp"
                        android:background="#fff"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_margin="2dip"
                        android:padding="0dip"/>

                    <TextView
                        android:id="@+id/note"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:background="#fff"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:layout_weight="3"
                        android:layout_margin="2dip"
                        android:padding="0dip"/>

                </TableRow>

            </TableLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
